# StellaSentinal

./: .claude_settings.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT-REPORT.md  Dockerfile  FEATURE-PROPOSALS.md  IMPROVEMENT-PLAN.md  LICENSE  Makefile  README.md  REVIEW_REPORT.md  TEST-REPORT.md  UI-IMPROVEMENTS.md  aiops-dashboard-mockup.html  docker-compose.yml  env.minimal  env.template  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
ApplicationReady/: .dockerignore  Dockerfile  README.txt  docker-compose.yml  env.template  install.bat  pyproject.toml
ApplicationReady/frontend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json
ApplicationReady/frontend/src/: App.tsx  index.css  main.tsx
ApplicationReady/frontend/src/api/: client.ts  mockData.ts
ApplicationReady/frontend/src/components/: BaselineManagement.tsx  Card.tsx  IsolationForestViz.tsx  KPICard.tsx  Layout.tsx  Sidebar.tsx
ApplicationReady/frontend/src/components/settings/: ConnectionCards.tsx  LLMSettings.tsx  index.ts
ApplicationReady/frontend/src/components/ui/: CardMenu.tsx  ChartLegend.tsx  DOMPathDisplay.tsx  Loading.tsx  ToggleSwitch.tsx  index.ts
ApplicationReady/frontend/src/hooks/: useAnomalies.ts  useMockMode.tsx
ApplicationReady/frontend/src/pages/: Automation.tsx  Dashboard.tsx  DataOverview.tsx  Fleet.tsx  InvestigationDetail.tsx  Investigations.tsx  KpiDetail.tsx  LocationCenter.tsx  ModelStatus.tsx  Setup.tsx  System.tsx  TrainingMonitor.tsx
ApplicationReady/frontend/src/pages/dashboard/: DashboardAnalysis.tsx  DashboardOperations.tsx  DashboardOverview.tsx  index.ts
ApplicationReady/frontend/src/types/: anomaly.ts  automation.ts  setup.ts
ApplicationReady/frontend/src/utils/: domPath.ts
ApplicationReady/src/device_anomaly/api/: __init__.py  dependencies.py  main.py
api/: server.py
backups/: .gitkeep
configs/: dw.yaml  synthetic.yaml
data/: .gitkeep
docs/: API_README.md  API_TEST_RESULTS.md  ARCHITECTURE_ANALYSIS.md  Android_Datapoints_Catalog.md  CODE_OF_CONDUCT.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DATABASE_DATAPOINTS.md  DATA_DISCOVERY.md  DISTRIBUTION.md  Data_Ingestion_Architecture.md  IMPLEMENTATION_SUMMARY.md  Isolation_Forest_Guide.md  ML_Models_Explanation.html  ML_Models_Explanation.md  NEXT_STEPS.md  ONNX_INTEGRATION_GUIDE.md  ONNX_README.md  SECURITY.md  SMOKE_TESTS.md  SOTI_API_Integration_Guide.md  SOTI_DataPoints_Catalog.md  SYSTEM_INTEGRATION_PROMPT.md  Skills.md  TRANSFORMATION_STATUS.md  UI_QUICKSTART.md  VISION_INTEGRATION_GUIDE.md  cost-intelligence-market-research.md  cost_savings_analysis.md  mobile_architecture.md  performance_analysis.md
docs/archive/: AUDIT_REPORT.md  FEATURE_PARITY.md  FLOW_MAP.md  PLAN.md  PLAN_NEXT_IMPROVEMENTS.md  PRODUCT_BLUEPRINT.md  UI_AUDIT.md  VERIFICATION_REPORT.md
e2e/: anomaly-workflow.spec.ts
frontend/: .eslintrc.cjs  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  contracts.ts  mockData.ts
frontend/src/components/: AIAnalysisDisplay.tsx  AIInsightsPanel.tsx  BaselineManagement.tsx  Breadcrumb.tsx  CorrelationsTab.tsx  DataQualityIndicator.tsx  EmptyState.tsx  ErrorBoundary.tsx  EventsAlertsTab.tsx  ImpactSummaryCard.tsx  IsolationForestViz.tsx  LLMSettingsModal.tsx  Layout.tsx  LocationHeatmap.tsx  LocationIntelligenceTab.tsx  Sidebar.tsx  SuccessToast.tsx  SystemHealthTab.tsx  TemporalAnalysisTab.tsx
frontend/src/hooks/: useAutoAIAnalysis.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useLocationAttribute.ts  useMockMode.tsx  usePageTitle.ts  useTheme.ts  useUserRole.tsx
frontend/src/lib/: formatters.ts  websocket.ts
frontend/src/pages/: ActionCenter.tsx  AnomalyDetail.tsx  AnomalyList.tsx  Automation.tsx  Baselines.tsx  CostManagement.tsx  Dashboard.tsx  DataOverview.tsx  DeviceDetail.tsx  Fleet.tsx  Insights.tsx  InvestigationDetail.tsx  Investigations.tsx  KpiDetail.tsx  LocationCenter.tsx  ModelStatus.tsx  NetworkIntelligence.tsx  NotFound.tsx  SecurityPosture.tsx  Setup.tsx  System.tsx  TrainingMonitor.tsx  UnifiedDashboard.tsx
frontend/src/types/: anomaly.ts  automation.ts  correlations.ts  cost.ts  insights.ts  setup.ts  training.ts  unified-dashboard.ts
frontend/src/utils/: domPath.ts  llmResponseParser.ts  severity.ts  storage.ts  toast.ts
frontend/tests/: apiContracts.test.ts  apiPaths.test.ts
office/: CONTINUOUS_BUILD.md
office/core/: daemon.py
office/mission-control/: index.html  workforce.json
office/scripts/: mission_control_daemon.py
projects/SOTI-Advanced-Analytics-Plus/ai-service/: anomaly_predictor.py  nba_engine.py
scripts/: benchmark_onnx.py  build_dist.sh  init_backend_schema.sql  init_db.sh  migrate_add_anomaly_unique_constraint.py  restore-databases.sql  restore-databases.sql.template  run_api.sh  setup-sqlserver.sh  smoke_test.sh  test_llm_connection.sh  verify.py
src/device_anomaly/api/: dependencies.py  errors.py  main.py  mock_mode.py  models.py  (+3 more)
tests/: conftest.py  test_anomaly_detection.py  test_anomaly_drift_fix.py  test_anomaly_predictor.py  test_api.py  test_api_contracts.py  test_baseline_store.py  test_cohort_stats.py  test_cost_endpoints.py  test_daemon.py  test_dashboard_stats.py  test_data_discovery_hardening.py  test_dl_models.py  test_dl_sklearn_parity.py  test_enhanced_anomaly_detection.py  test_error_responses.py  test_imports.py  test_ingestion_pipeline.py  test_input_validation.py  test_mc_timeseries_stream.py  test_mission_control.py  test_nba_engine.py  test_onnx_integration.py  test_pipeline_smoke.py  test_rate_limit.py  test_request_context.py  test_response_models.py  test_results_schema_migration.py  test_schema_discovery.py  test_streaming_contracts.py  test_streaming_drift.py  test_streaming_parity.py  test_streaming_state.py
tests/fixtures/: streaming_parity_events.csv  tiny_telemetry.csv
(+264 files in other folders)
