[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "device-anomaly"
version = "0.1.0"
description = "Device anomaly detection and explanation service"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
    "pyodbc>=5.1.0",  # SQL Server driver (for XSight/MobiControl)
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.40.0",
    "PyYAML>=6.0.1",
    "plotly>=5.0.0",
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",  # Redis client for ML job queue
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    # ONNX Runtime integration for optimized ML inference
    "onnxruntime>=1.16.0",      # ONNX Runtime for inference
    "skl2onnx>=1.16.0",         # scikit-learn to ONNX converter
    "onnxmltools>=1.12.0",      # Additional ML framework converters
    "onnx>=1.15.0",             # ONNX model format library
    # Advanced ML and feature engineering
    "statsmodels>=0.14.0",      # STL decomposition, time-series forecasting
    "shap>=0.44.0",             # SHAP explainability for anomaly detection
    "hdbscan>=0.8.33",          # Clustering for location pattern analysis
    "networkx>=3.2.0",          # Causal graph for root cause analysis
    "scipy>=1.11.0",            # Statistical functions for feature engineering
    # Deep Learning (PyTorch) - CPU version by default
    "torch>=2.1.0",             # PyTorch for VAE/Autoencoder anomaly detection
    # Streamlit for legacy Python dashboard UI
    "streamlit>=1.30.0",        # Streamlit dashboard framework
]

[project.optional-dependencies]
# GPU support for Deep Learning (CUDA)
gpu = [
    "torch>=2.1.0",  # Will use CUDA version when installed with --extra-index-url
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require database/services)",
    "slow: Slow tests (ML training, large data processing)",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 50
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "migrations/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "torch.*",
    "onnx.*",
    "onnxruntime.*",
    "shap.*",
    "hdbscan.*",
    "networkx.*",
    "statsmodels.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in FastAPI)
    "B904",   # raise without from (too noisy)
]

[tool.ruff.lint.isort]
known-first-party = ["device_anomaly"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
