[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "device-anomaly"
version = "0.1.0"
description = "Device anomaly detection and explanation service"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
    "pyodbc>=5.1.0",  # SQL Server driver (for XSight/MobiControl)
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.40.0",
    "PyYAML>=6.0.1",
    "streamlit>=1.38.0",
    "plotly>=5.0.0",
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",  # Redis client for ML job queue
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    # ONNX Runtime integration for optimized ML inference
    "onnxruntime>=1.16.0",      # ONNX Runtime for inference
    "skl2onnx>=1.16.0",         # scikit-learn to ONNX converter
    "onnxmltools>=1.12.0",      # Additional ML framework converters
    "onnx>=1.15.0",             # ONNX model format library
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
